--- a/kubernetes/serverctl.yaml
+++ b/kubernetes/serverctl.yaml
@@ -15,11 +15,11 @@ spec:
         app: serverctl
     spec:
       containers:
-      - name: serverctl
-        image: robertovrf/server-ctl:latest
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 5000
+        - name: serverctl
+          image: andrepapoti/server-ctl
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 5000
 ---
 apiVersion: v1
 kind: Service
@@ -27,9 +27,9 @@ metadata:
   name: serverctl
 spec:
   ports:
-  - port: 5000
-    protocol: TCP
-    targetPort: 5000
+    - port: 5000
+      protocol: TCP
+      targetPort: 5000
   selector:
     app: serverctl
   type: ClusterIP
