feat: add node selector to config files

--- a/kubernetes/distributor.yaml
+++ b/kubernetes/distributor.yaml
@@ -21,6 +21,8 @@ spec:
           ports:
             - containerPort: 5000
             - containerPort: 5001
+      nodeSelector:
+        pfgtype: meta
 ---
 apiVersion: v1
 kind: Service
