--- a/kubernetes/serverctl.yaml
+++ b/kubernetes/serverctl.yaml
@@ -20,6 +20,8 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 5000
+      nodeSelector:
+        pfgtype: meta
 ---
 apiVersion: v1
 kind: Service
